--- a/frontend/vehUI/src/app/common/component/page-footer/page-footer.component.html
+++ b/frontend/vehUI/src/app/common/component/page-footer/page-footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span>Made By: Sanyam Jain</span>
+    <span>Made By: Team YODDHA </span>
     <span class="spacer"></span>
     <div class="copyright">
         <span>Copyright 2024</span>
