--- a/frontend/vehUI/src/app/admin/service-records/service-records.component.html
+++ b/frontend/vehUI/src/app/admin/service-records/service-records.component.html
@@ -2,13 +2,17 @@
     <h3>Completed Service Records</h3>
     <table mat-table [dataSource]="serviceRecords">
 
-        <!-- ID Column -->
+
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>ID</th>
             <td mat-cell *matCellDef="let record">{{ record.id }}</td>
         </ng-container>
 
-        <!-- Actions Column -->
+        <!-- <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Servise Advisor Name</th>
+            <td mat-cell *matCellDef="let record">{{ record.serviceAdvisor?.name }}</td>
+        </ng-container> -->
+
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let record">
@@ -16,7 +20,7 @@
             </td>
         </ng-container>
 
-        <!-- Define the rows and columns -->
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
