--- a/frontend/vehUI/src/app/auth/login/login.component.html
+++ b/frontend/vehUI/src/app/auth/login/login.component.html
@@ -1,14 +1,18 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Login Form</mat-card-title>
+        <mat-card-title>Please Login!!!</mat-card-title>
     </mat-card-header>
 
+  
     <mat-card-content [formGroup]="loginForm">
         <mat-form-field color="accent">
             <mat-label>Email</mat-label>
             <input matInput formControlName="email">
-            <mat-error>
+            <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
                 Field is required.
+            </mat-error>
+            <mat-error *ngIf="loginForm.get('email')?.hasError('email')">
+                Please enter a valid email address.
             </mat-error>
         </mat-form-field>
 
@@ -21,14 +25,17 @@
                 <mat-icon> {{hidePassword ? "visibility_off" : "visibility_on"}}
                 </mat-icon>
             </button>
-            <mat-error>
+            <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
                 Field is required.
             </mat-error>
         </mat-form-field>
     </mat-card-content>
 
     <mat-card-actions>
-        <button mat-raised-button color="accent"
-                (click)="login()">Login</button>
+        <button mat-raised-button color="accent" (click)="login()">Login</button>
+    </mat-card-actions>
+    <mat-card-actions>
+        <h4>Don't have an account?</h4>
+        <a mat-stroked-button color="accent" (click)="navigateToRegister()">Register</a>
     </mat-card-actions>
 </mat-card>
